# mit-catalyze

./: .gitignore  .gitmodules  PROMPT_ARCHITECTURE.md  README.md  automation_generator.py  config.py  flask_app.py  llm_client.py  main.py  manage_submodules.sh  package.json  pdf_reading_alternatives.py  protocol_generator.py  pubchem_client.py  pyproject.toml  quick_test_results.json  requirements.txt  requirements_flask.txt  setup_openai.py  start_catalyze.sh  start_react_flask.sh  tailwind.config.js  test_agent_system.py  test_app.py  test_llm_client.py  test_mcp_integration.py  test_pdf_quick.py  test_pdf_simple.py
app/: __init__.py  flask_app.py
catalyze-frontend/: package.json
config/: prompt_configs.json
docs/: AGENT_ARCHITECTURE_SUMMARY.md  CHAT_DELETION_FIX.md  MCP_CONFIGURATION.md  PDF_UPLOAD_FEATURE.md  SETUP.md  SUBMODULE_SETUP.md
public/: index.html
react-build/: asset-manifest.json  enhanced-index.html  index.html  opentrons-generator.js  test_pdf_upload.html
scripts/: manage_prompts.py  test_prompts.py
src/: App.js  __init__.py  index.css  pipeline.py
tests/: README.md  __init__.py  opentrons_test_results_20250911_205845.json  opentrons_test_results_20250911_210903.json  test_agent_initialization.py  test_classifier_comparison.py  test_full_pipeline.py  test_guardrails_simple.py  test_improved_prompts.py  test_intent_classification.py  test_langfuse_integration.py  test_llm.py  test_markdown_rendering.py  test_mcp_client.py  test_mcp_integration.py  test_mcp_simple.py  test_mcp_tool_calls.py  test_mcp_tools.py  test_opentrons_detection.py  (+12 more)
(+65 files in other folders)
